[tool.poetry]
name = "neuronet-bot"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <106510078+Pavel2232@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "neuronet_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
environs = "^9.5.0"
google-cloud-dialogflow = "^2.23.3"
google-cloud-api-keys = "^0.5.3"
requests = "^2.31.0"
vk-api = "^11.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
